--- a/comounirse.html
+++ b/comounirse.html
@@ -4,16 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>¿Cómo unirse? - Hernavia</title>
-<meta name="description" content="Formulario e información sobre cómo unirse a Hernavia. Participa y forma parte de nuestra comunidad.">
-<link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-<link rel="preload" href="estilo.css" as="style">
+<link rel="icon" href="https://hernavia.github.io/Hernavia/favicono.png" type="image/png">
 <link rel="stylesheet" href="estilo.css">
-<link rel="canonical" href="https://hernavia.github.io/Hernavia/comounirse.html">
-<meta name="robots" content="index, follow">
-<meta name="author" content="Proyecto Hernavia">
 </head>
-
 <body>
+
 <header>
   <h1>¿Cómo unirse a Hernavia?</h1>
 </header>
@@ -30,8 +25,10 @@
 </nav>
 
 <main>
+
+  <!-- Formulario de unión -->
   <section class="section">
-    <p>Actualmente, la ciudadanía por vía virtual no está habilitada. Sin embargo, puedes llenar este formulario y recibirás notificación cuando se active. La participación es clave: tu participación en consultas y actividades quedará registrada y será tomada en cuenta dentro de la comunidad.</p>
+    <p>Actualmente, la ciudadanía virtual no está habilitada. Sin embargo, puedes llenar este formulario y recibirás notificación cuando se active.</p>
 
     <form action="https://formspree.io/f/xldpgjop" method="POST" class="formulario-union">
       <label for="nombre">Nombre completo:</label>
@@ -54,63 +51,52 @@
 
       <label>
         <input type="checkbox" name="terminos" required>
-        Acepto los <a href="#" id="abrir-politica">términos y condiciones</a> de Hernavia.
+        Acepto los <a href="#" id="abrir-politica">términos y condiciones</a>.
       </label>
 
-      <button type="submit">Enviar solicitud</button>
+      <button type="submit" class="btn-faq">Enviar solicitud</button>
     </form>
   </section>
 
   <!-- Preguntas Frecuentes -->
-  <section class="section faq-section">
-    <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
-    <div style="text-align:center; margin-bottom:10px;">
-      <button id="mostrar-faq" class="faq-boton">Mostrar Preguntas</button>
-    </div>
-    <div id="faq-container" class="faq-container" style="display:none; text-align:left; max-width:700px; margin:0 auto;">
+  <section class="section faq-section" style="text-align:center;">
+    <h2 style="color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
+    <button id="mostrar-faq" class="btn-faq">Mostrar Preguntas</button>
+
+    <div id="faq-container" style="display:none; text-align:left; max-width:700px; margin:20px auto;">
       <details class="faq-card">
         <summary>¿Por qué la ciudadanía virtual no está activa?</summary>
-        <p>Actualmente, el sistema de ciudadanía virtual está en desarrollo. Se activará cuando se establezcan los mecanismos de registro, validación y participación digital que garanticen seguridad y transparencia.</p>
+        <p>El sistema de ciudadanía virtual está en desarrollo y se activará cuando los mecanismos de registro y participación estén listos.</p>
       </details>
 
       <details class="faq-card">
         <summary>¿Qué ventajas tendrá la ciudadanía virtual?</summary>
-        <p>Permitirá participar activamente en consultas, acceder a documentación interna, recibir comunicados oficiales y representar formalmente a Hernavia en proyectos o eventos colaborativos.</p>
-      </details>
-
-      <details class="faq-card">
-        <summary>¿Puedo participar aunque no tenga ciudadanía?</summary>
-        <p>Sí. Todas las personas pueden enviar sugerencias, responder consultas o aportar ideas al proyecto sin necesidad de tener ciudadanía formal. La participación abierta es parte de la identidad de Hernavia.</p>
-      </details>
-
-      <details class="faq-card">
-        <summary>¿Qué compromisos implica unirse?</summary>
-        <p>Unirse significa respetar los principios de Hernavia: cooperación, respeto, innovación y trabajo colectivo. No implica ninguna obligación legal fuera del proyecto, solo compromiso con la comunidad.</p>
+        <p>Permitirá participar activamente en consultas, recibir comunicados oficiales y representar a Hernavia en proyectos o eventos.</p>
       </details>
     </div>
   </section>
 
-  <!-- Identidad / CTA -->
-  <section class="section cta" style="background:white; text-align:center;">
+  <!-- Identidad / CTA centrado -->
+  <section class="section cta" style="background:white; text-align:center; margin:0 auto; max-width:700px;">
     <h2>¿Qué significa unirse a Hernavia?</h2>
     <p>Unirse no es solo llenar un formulario: significa compartir una identidad, valores y visión de comunidad.</p>
-    <a href="identidad.html" class="btn-link">Descúbrelo aquí</a>
+    <a href="identidad.html" class="btn-faq">Descúbrelo aquí</a>
   </section>
+
 </main>
 
 <footer>
   &copy; 2025 Hernavia — Proyecto Cultural
 </footer>
 
-<!-- Modal de Política -->
+<!-- Modal de política oculto -->
 <div id="modal-politica" style="display:none;">
   <div class="contenido">
     <h2>Política de Seguridad de Datos</h2>
-    <p>En Hernavia, la protección de tus datos es prioritaria. Los siguientes datos son obligatorios: <strong>nombre completo, fecha de nacimiento, país/departamento y correo electrónico.</strong></p>
-    <p>Puedes opcionalmente proporcionar tu municipio y ocupación.</p>
-    <p>Si decides retirarte, tus datos se conservarán hasta por <strong>2 meses</strong> para fines administrativos, luego serán eliminados de manera segura.</p>
-    <p>Puedes solicitar en cualquier momento la <strong>eliminación</strong> o <strong>corrección</strong> de tus datos enviando un correo al equipo de Hernavia.</p>
-    <button id="cerrar-politica">Cerrar</button>
+    <p>Protegemos tus datos: nombre, correo, fecha de nacimiento y país/departamento son obligatorios.</p>
+    <p>Opcionalmente puedes proporcionar municipio y ocupación.</p>
+    <p>Si decides retirarte, los datos se conservarán hasta 2 meses y luego se eliminarán.</p>
+    <button id="cerrar-politica" class="btn-faq">Cerrar</button>
   </div>
 </div>
 
@@ -121,20 +107,22 @@ const modal = document.getElementById("modal-politica");
 const faqBoton = document.getElementById("mostrar-faq");
 const faqContainer = document.getElementById("faq-container");
 
+// Abrir modal política
 abrir.addEventListener("click", e => {
   e.preventDefault();
   modal.style.display = "flex";
 });
 
-cerrar.addEventListener("click", () => {
-  modal.style.display = "none";
-});
+// Cerrar modal política
+cerrar.addEventListener("click", () => modal.style.display = "none");
 
+// Mostrar / ocultar preguntas frecuentes
 faqBoton.addEventListener("click", () => {
   const visible = faqContainer.style.display === "block";
   faqContainer.style.display = visible ? "none" : "block";
   faqBoton.textContent = visible ? "Mostrar Preguntas" : "Ocultar Preguntas";
 });
 </script>
+
 </body>
 </html>
