--- a/comounirse.html
+++ b/comounirse.html
@@ -80,11 +80,11 @@
     </div>
   </section>
 
-  <section class="section cta" style="texto-largo;">
-    <h2>¿Qué significa unirse a Hernavia?</h2>
-    <p>Unirse no es solo llenar un formulario: significa compartir una identidad, valores y visión de comunidad.</p>
-    <a href="identidad.html" class="btn-link">Descúbrelo aquí</a>
-  </section>
+  <section id="donde" class="texto-largo">
+      <h2>¿Dónde se encuentra?</h2>
+      <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y su administración. Actualmente se encuentra en una etapa inicial y teórica, por lo cual aún no existen estructuras o acciones tangibles. Tus sugerencias y apoyo son esenciales para fortalecerla.</p>
+    </section>
+    
 </main>
 
 <!-- Modal de Política (mini página flotante) -->
