--- a/comounirse.html
+++ b/comounirse.html
@@ -81,8 +81,9 @@
   </section>
 
   <section id="donde" class="texto-largo">
-      <h2>¿Dónde se encuentra?</h2>
-      <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y su administración. Actualmente se encuentra en una etapa inicial y teórica, por lo cual aún no existen estructuras o acciones tangibles. Tus sugerencias y apoyo son esenciales para fortalecerla.</p>
+      <h2>¿Que significa unirse a Hernavia?</h2>
+      <p>Unirse no es solo llenar un formulario es una identidad quieres saber mas?.</p>
+          <a href="identidad.html" class="btn-link">Descúbrelo aquí</a>
     </section>
     
 </main>
