--- a/comounirse.html
+++ b/comounirse.html
@@ -84,6 +84,7 @@
       <h2>¿Que significa unirse a Hernavia?</h2>
       <p>Unirse no es solo llenar un formulario es una identidad quieres saber mas?.</p>
           <a href="identidad.html" class="btn-link">Descúbrelo aquí</a>
+      <div id="faqContainer" class="faq-container" style="display:none; margin-top:15px;">
     </section>
     
 </main>
