--- a/comounirse.html
+++ b/comounirse.html
@@ -80,12 +80,15 @@
     </div>
   </section>
 
-  <section id="donde" class="texto-largo">
-      <h2>¿Que significa unirse a Hernavia?</h2>
-      <p>Unirse no es solo llenar un formulario es una identidad quieres saber mas?.</p>
-          <a href="identidad.html" class="btn-link">Descúbrelo aquí</a>
-      <div id="faqContainer" class="faq-container" style="display:none; margin-top:15px;">
-    </section>
+ <section id="¿que significa?" class="texto-largo">
+  <h2>¿Que significa unirse a Hernavia?</h2>
+  <p>Unirse no es solo llenar un formulario es una identidad quieres saber mas?.</p>
+  <div style="text-align:center;">
+    <a href="identidad.html" class="btn-link">Descúbrelo aquí</a>
+  </div>
+  <div id="faqContainer" class="faq-container" style="display:none; margin-top:15px;">
+</section>
+
     
 </main>
 
