--- a/comounirse.html
+++ b/comounirse.html
@@ -79,7 +79,7 @@
     <summary>¿Qué ventajas tendrá la ciudadanía virtual?</summary>
     <p>Permitirá participar activamente en consultas, acceder a documentación interna, recibir comunicados oficiales y representar formalmente a Hernavia en proyectos o eventos colaborativos.</p>
   </details>
-
+</section>
 </div>
 
 
