--- a/comounirse.html
+++ b/comounirse.html
@@ -85,7 +85,7 @@
 
  <section id="¿que significa?" class="texto-largo">
   <h2>¿Que significa unirse a Hernavia?</h2>
-  <p>Unirse no es solo llenar un formulario es una identidad quieres saber mas?.</p>
+  <p>Unirse no es solo llenar un formulario es una identidad.¿quieres saber mas?.</p>
   <div style="text-align:center;">
     <a href="identidad.html" class="btn-link">Descúbrelo aquí</a>
   </div>
