--- a/sugerencias.html
+++ b/sugerencias.html
@@ -120,7 +120,7 @@ label { font-weight: bold; }
     <span>¿Puedes cambiar el futuro?</span>
   </div>
 
-  <button class="audio-boton" id="play-audio">▶ Escuchar</button>
+  <button class="audio-boton" id="play-audio">▶ ¿?</button>
   <audio id="audio-futuro" src="futuro.mp3" preload="none"></audio>
 
   <form action="https://formspree.io/f/xldpgjop" method="POST">
