--- a/identidad.html
+++ b/identidad.html
@@ -78,35 +78,33 @@
              width="283" 
              height="188" 
              fetchpriority="high">
-    </section>
+<section class="section" style="text-align:center;">
+    <h2>Preguntas Frecuentes</h2>
+    <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
 
-    <!-- Preguntas Frecuentes -->
-    <section class="section" style="text-align:center;">
-        <h2>Preguntas Frecuentes</h2>
-        <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+    <div id="faqContainer" class="faq-container" style="display:none; margin-top:15px;">
+        <details class="faq-card">
+            <summary>¿Qué es Hernavia?</summary>
+            <p style="text-align:left;">Hernavia es una identidad y un proyecto cultural. es un espacio donde las personas viven y luchan por una visión.</p>
+        </details>
 
-        <div id="faqContainer" class="faq-container" style="display:none; margin-top:15px;">
-            <details class="faq-card">
-                <summary>¿Qué es Hernavia?</summary>
-                <p>Hernavia es una <strong>identidad colectiva</strong> y un proyecto cultural. Va más allá de un país o estado: es un espacio donde las personas se reconocen y participan bajo una misma visión.</p>
-            </details>
+        <details class="faq-card">
+            <summary>¿Hernavia es un país real?</summary>
+            <p style="text-align:left;">Puedes considerarla una micronación o nación no reconocida oficialmente. Pero no es un pais.</p>
+        </details>
 
-            <details class="faq-card">
-                <summary>¿Hernavia es un país real?</summary>
-                <p>Puedes considerarla una <strong>micronación o nación no reconocida oficialmente</strong>. Aunque no tenga reconocimiento legal, funciona como comunidad organizada con roles y principios propios.</p>
-            </details>
+        <details class="faq-card">
+            <summary>¿Cuáles son los principios de Hernavia?</summary>
+            <p style="text-align:left;">Se fundamenta en la paz, innovación, respeto por la naturaleza, cuidado del agua, unión de la comunidad y paz.</p>
+        </details>
 
-            <details class="faq-card">
-                <summary>¿Cuáles son los principios de Hernavia?</summary>
-                <p>Se fundamenta en la paz, innovación, respeto por la naturaleza, cuidado del agua, unión de la comunidad y verdad.</p>
-            </details>
+        <details class="faq-card">
+            <summary>¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
+            <p style="text-align:left;">Sí. Aunque no seas ciudadano hernaviano, puedes ser hernaviano como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
+        </details>
+    </div>
+</section>
 
-            <details class="faq-card">
-                <summary>¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
-                <p>Sí. Aunque no seas ciudadano hernaviano, puedes <strong>ser hernaviano</strong> como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
-            </details>
-        </div>
-    </section>
 
 </main>
 
