--- a/identidad.html
+++ b/identidad.html
@@ -78,33 +78,32 @@
              width="283" 
              height="188" 
              fetchpriority="high">
-<section class="section" style="text-align:center;">
-    <h2>Preguntas Frecuentes</h2>
-    <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
-
-    <div id="faqContainer" class="faq-container" style="display:none; margin-top:15px;">
-        <details class="faq-card">
-            <summary>¿Qué es Hernavia?</summary>
-            <p style="text-align:left;">Hernavia es una identidad y un proyecto cultural. es un espacio donde las personas viven y luchan por una visión.</p>
-        </details>
-
-        <details class="faq-card">
-            <summary>¿Hernavia es un país real?</summary>
-            <p style="text-align:left;">Puedes considerarla una micronación o nación no reconocida oficialmente. Pero no es un pais.</p>
-        </details>
-
-        <details class="faq-card">
-            <summary>¿Cuáles son los principios de Hernavia?</summary>
-            <p style="text-align:left;">Se fundamenta en la paz, innovación, respeto por la naturaleza, cuidado del agua, unión de la comunidad y paz.</p>
-        </details>
-
-        <details class="faq-card">
-            <summary>¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
-            <p style="text-align:left;">Sí. Aunque no seas ciudadano hernaviano, puedes ser hernaviano como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
-        </details>
-    </div>
 </section>
+    
+<h2>Preguntas Frecuentes</h2>
+<button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
 
+<div id="faqContainer" class="faq-container" style="display:none; margin-top:15px;">
+    <details class="faq-card">
+        <summary style="text-align:left;">¿Qué es Hernavia?</summary>
+        <p style="text-align:left;">Hernavia es una identidad y un proyecto cultural. Es un espacio donde las personas viven y luchan por una visión.</p>
+    </details>
+
+    <details class="faq-card">
+        <summary style="text-align:left;">¿Hernavia es un país real?</summary>
+        <p style="text-align:left;">Puedes considerarla una micronación o nación no reconocida oficialmente. Pero no es un país.</p>
+    </details>
+
+    <details class="faq-card">
+        <summary style="text-align:left;">¿Cuáles son los principios de Hernavia?</summary>
+        <p style="text-align:left;">Se fundamenta en la paz, innovación, respeto por la naturaleza, cuidado del agua, unión de la comunidad y paz.</p>
+    </details>
+
+    <details class="faq-card">
+        <summary style="text-align:left;">¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
+        <p style="text-align:left;">Sí. Aunque no seas ciudadano hernaviano, puedes ser hernaviano como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
+    </details>
+</div>
 
 </main>
 
