--- a/index.html
+++ b/index.html
@@ -69,43 +69,33 @@
   </main>
 
   <!-- Sección de Preguntas Frecuentes -->
- <section class="section">
-          <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
+<section class="section" style="text-align:center;">
+  <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
 
-          <div style="text-align:center;">
-            <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
-          </div>
+  <div style="text-align:center;">
+    <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+  </div>
 
-          <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
+  <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
 
     <details class="faq-card">
-      <summary>¿Cómo los puedo contactar?</summary>
-      <p>Puedes escribirnos desde la sección de <a href="sugerencias.html">Sugerencias</a> o a través de nuestras redes sociales. Todos los mensajes llegan directamente al equipo de Hernavia.</p>
+      <summary style="text-align:left;">¿Qué es Hernavia?</summary>
+      <p style="text-align:left;">Hernavia es una identidad colectiva y un proyecto cultural. Es un espacio donde las personas viven y luchan por una visión compartida.</p>
     </details>
 
     <details class="faq-card">
-      <summary>¿Por qué “Arconte”?</summary>
-      <p>Es un término simbólico elegido para representar una figura de liderazgo dentro de Hernavia. El nombre de Arconte fue escogido para distinguir a Hernavia sin aferrarse a títulos tradicionales.</p>
+      <summary style="text-align:left;">¿Hernavia es un país real?</summary>
+      <p style="text-align:left;">Puedes considerarla una micronación, nación o estado no reconocido oficialmente. Aunque no tenga reconocimiento legal, funciona como comunidad organizada con roles y principios propios.</p>
     </details>
 
     <details class="faq-card">
-      <summary>¿Por qué la ciudadanía virtual aún no está disponible?</summary>
-      <p>Porque la organización de Hernavia aún no puede coexistir de manera efectiva si los ciudadanos virtuales tienen los mismos deberes y derechos. Esto se debe a la capacidad limitada de alcance y la política de aporte obligatorio vigente.</p>
+      <summary style="text-align:left;">¿Cuáles son los principios de Hernavia?</summary>
+      <p style="text-align:left;">Se fundamenta en la paz, innovación, respeto por la naturaleza, cuidado del agua, unión de la comunidad y verdad.</p>
     </details>
 
     <details class="faq-card">
-      <summary>¿Existen riesgos legales al unirse a Hernavia?</summary>
-      <p>No. Todas las sanciones son internas y no hay riesgos legales reales por incumplimiento. Las sanciones solo pueden incluir medidas internas o la revocación de la ciudadanía según las leyes transitorias.</p>
-    </details>
-
-    <details class="faq-card">
-      <summary>¿Hernavia tiene afiliación política o religiosa?</summary>
-      <p>No. Hernavia es completamente subjetiva e independiente. Aunque puede mostrar apoyo a ciertas ideas ideológicas, siempre lo hace de manera neutral, realista y sin afiliación partidista ni religiosa.</p>
-    </details>
-
-    <details class="faq-card">
-      <summary>¿Qué beneficios tiene unirse a Hernavia?</summary>
-      <p>Formar parte de Hernavia te permite participar en votaciones, ser tomado en cuenta de manera activa y acceder a beneficios internos futuros de la comunidad.</p>
+      <summary style="text-align:left;">¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
+      <p style="text-align:left;">Sí. Aunque no seas ciudadano hernaviano, puedes <strong>ser hernaviano</strong> como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
     </details>
 
   </div>
@@ -129,6 +119,7 @@
 
 </body>
 </html>
+
 
 
 
