--- a/identidad.html
+++ b/identidad.html
@@ -80,32 +80,37 @@
              fetchpriority="high">
 </section>
     
-<h2>Preguntas Frecuentes</h2>
-<button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+<section class="section" style="text-align:center;">
+  <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
 
-<div id="faqContainer" class="faq-container" style="display:none; margin-top:15px;">
+  <div style="text-align:center;">
+    <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+  </div>
+
+  <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
+
     <details class="faq-card">
-        <summary style="text-align:left;">¿Qué es Hernavia?</summary>
-        <p style="text-align:left;">Hernavia es una identidad y un proyecto cultural. Es un espacio donde las personas viven y luchan por una visión.</p>
+      <summary style="text-align:left;">¿Qué es Hernavia?</summary>
+      <p style="text-align:left;">Hernavia es una identidad colectiva y un proyecto cultural. Es un espacio donde las personas viven y luchan por una visión compartida.</p>
     </details>
 
     <details class="faq-card">
-        <summary style="text-align:left;">¿Hernavia es un país real?</summary>
-        <p style="text-align:left;">Puedes considerarla una micronación o nación no reconocida oficialmente. Pero no es un país.</p>
+      <summary style="text-align:left;">¿Hernavia es un país real?</summary>
+      <p style="text-align:left;">Puedes considerarla una micronación, nación o estado no reconocido oficialmente. Aunque no tenga reconocimiento legal, funciona como comunidad organizada con roles y principios propios.</p>
     </details>
 
     <details class="faq-card">
-        <summary style="text-align:left;">¿Cuáles son los principios de Hernavia?</summary>
-        <p style="text-align:left;">Se fundamenta en la paz, innovación, respeto por la naturaleza, cuidado del agua, unión de la comunidad y paz.</p>
+      <summary style="text-align:left;">¿Cuáles son los principios de Hernavia?</summary>
+      <p style="text-align:left;">Se fundamenta en la paz, innovación, respeto por la naturaleza, cuidado del agua, unión de la comunidad y verdad.</p>
     </details>
 
     <details class="faq-card">
-        <summary style="text-align:left;">¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
-        <p style="text-align:left;">Sí. Aunque no seas ciudadano hernaviano, puedes ser hernaviano como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
+      <summary style="text-align:left;">¿Puedo considerarme hernaviano aunque no sea ciudadano?</summary>
+      <p style="text-align:left;">Sí. Aunque no seas ciudadano hernaviano, puedes <strong>ser hernaviano</strong> como identidad cultural y simbólica. No necesitas registro ni reconocimiento oficial para sentirte parte de Hernavia.</p>
     </details>
-</div>
 
-</main>
+  </div>
+</section>
 
 <footer>
     &copy; 2025 Hernavia - Proyecto Cultural
