--- a/noticiasproto.html
+++ b/noticiasproto.html
@@ -1,19 +1,19 @@
-<section class="news-section">
-  <h2>Noticias Hernavia</h2>
+<section class="texto-largo" style="border-left:8px solid #ADFF2F;">
+  <h2 style="color:#ADFF2F;">Noticias Random</h2>
 
-  <details class="official" open>
-    <summary>Noticias Oficiales</summary>
+  <details>
+    <summary>Curiosidad 1</summary>
     <div class="news-item">
-      <h3>Noticia Oficial 1</h3>
-      <p>Contenido oficial de Hernavia...</p>
+      <h3 style="color:#ADFF2F;">Curiosidad 1</h3>
+      <p>Contenido random divertido o curioso...</p>
     </div>
   </details>
 
-  <details class="random">
-    <summary>Noticias Random</summary>
+  <details>
+    <summary>Curiosidad 2</summary>
     <div class="news-item">
-      <h3>Curiosidad 1</h3>
-      <p>Contenido random divertido o curioso...</p>
+      <h3 style="color:#ADFF2F;">Curiosidad 2</h3>
+      <p>Otro contenido ligero...</p>
     </div>
   </details>
 </section>
